<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pd.noteonthego.activities.ChecklistActivity">

    <item
        android:id="@+id/action_save_note"
        android:orderInCategory="98"
        android:title="@string/action_save_note"
        android:icon="@drawable/save"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete_note"
        android:orderInCategory="99"
        android:title="@string/action_delete_note"
        android:icon="@drawable/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_set_reminder"
        android:orderInCategory="100"
        android:title="@string/action_add_reminder"
        android:icon="@drawable/alarm"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_change_color"
        android:orderInCategory="101"
        android:title="@string/action_change_color"
        android:icon="@drawable/color"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share_note"
        android:orderInCategory="102"
        android:title="@string/action_share_note"
        android:icon="@drawable/share"
        app:showAsAction="ifRoom" />

</menu>
