<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pd.noteonthego.activities.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_note"
        android:orderInCategory="97"
        android:title="@string/action_add_note"
        android:icon="@drawable/add_note"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_checklist"
        android:orderInCategory="98"
        android:title="@string/action_add_checklist"
        android:icon="@drawable/add_checklist"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="99"
        android:title="@string/action_sort"
        android:icon="@drawable/sort"
        app:showAsAction="ifRoom" />
</menu>
