<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pd.noteonthego.activities.NotesActivity">
    <item
        android:id="@+id/action_save_note"
        android:orderInCategory="99"
        android:title="@string/action_save_note"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_set_reminder"
        android:orderInCategory="100"
        android:title="@string/action_add_reminder"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/action_change_color"
        android:orderInCategory="101"
        android:title="@string/action_change_color"
        app:showAsAction="never|withText" />
</menu>
